# virtual-contributor-engine-guidance

./: .azure-template.env  .gitignore  .openai-template.env  Dockerfile  README.md  ai_adapter.py  ai_utils.py  app.py  azure-template.env  config.py  def_ai_setup.py  def_ingest.py  docker-compose.yaml  generate-website.sh  guidance_engine.py  guidance_engine_adapter.py  openai-template.env  payloads.json  pyproject.toml  requirements.txt  virtual_contributor_engine_guidance.py
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  user_story.md
.github/workflows/: build-deploy-k8s-dev-azure.yml  build-deploy-k8s-dev-hetzner.yml  build-deploy-k8s-sandbox-azure.yml  build-deploy-k8s-sandbox-hetzner.yml  build-deploy-k8s-test-azure.yml  build-deploy-k8s-test-hetzner.yml  build-release-docker-hub.yml
manifests/: 25-genai-deployment-dev.yaml  25-virtual-contributor-engine-guidance-deployment-dev.yaml
testing/: hugo_loading.py
