[tool.poetry]
name = "guidance-engine-adapter"
version = "0.5.1"
description = "Alkemio Generative AI Guidance Engine"
authors = ["Alkemio <info@alkem.io>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.351"
langchain-core= "^0.1"
langchain-community = ">=0.0.2"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
faiss-cpu = "^1.7.4"
openai = "^1.3.8"
load-dotenv = "^0.1.0"
pytesseract = "^0.3.10"
tiktoken = "^0.5.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
async-timeout = "^4.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

