[tool.poetry]
name = "guidance-engine"
version = "0.6.0"
description = "Alkemio Generative AI Guidance Engine"
authors = ["Alkemio BV <info@alkem.io>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.0.354"
langchain-core= "^0.1.5"
langchain-community = ">=0.0.8"
python-dotenv = "^1.0.0"
faiss-cpu = "^1.7.4"
openai = "^1.3.8"
load-dotenv = "^0.1.0"
beautifulsoup4 = "^4.12.2"
async-timeout = "^4.0.3"
aio-pika = "^9.3.1"
aiormq = "^6.7.7"
tiktoken = "^0.5.2"
langchain-openai = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

